--- a/etc/projects.yml
+++ b/etc/projects.yml
@@ -3,8 +3,8 @@ projects:
     name: example
     title: Example
     token: fjldf7sfSf8asLf8ss7
+
   - id: 2
     name: nginx
     title: NGINX
-    token: nginx
-    udp: true
+    token: sfoius4534j
